[gd_scene load_steps=12 format=3 uid="uid://vxf8leb6uqk7"]

[ext_resource type="Theme" uid="uid://70yhvrg7ebw" path="res://ui/theme.tres" id="1_jegv2"]
[ext_resource type="Texture2D" uid="uid://cxwwsu1cahlnm" path="res://assets/level_menu.png" id="2_hdqaw"]
[ext_resource type="Script" path="res://ui/level_menu/CollectedIndicator.gd" id="3_nj5gh"]
[ext_resource type="Script" path="res://ui/level_menu/LevelButton.gd" id="3_qoq0a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_okt7l"]
atlas = ExtResource("2_hdqaw")
region = Rect2(0, 0, 64, 38)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_knew0"]
atlas = ExtResource("2_hdqaw")
region = Rect2(0, 38, 64, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_1288j"]
atlas = ExtResource("2_hdqaw")
region = Rect2(1, 77, 62, 36)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_pl6wg"]
resource_local_to_scene = true
atlas = ExtResource("2_hdqaw")
region = Rect2(64, 0, 12, 12)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_eqi5q"]
resource_local_to_scene = true
atlas = ExtResource("2_hdqaw")
region = Rect2(64, 0, 12, 12)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_4l6w8"]
resource_local_to_scene = true
atlas = ExtResource("2_hdqaw")
region = Rect2(64, 0, 12, 12)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_0tlq2"]
resource_local_to_scene = true
atlas = ExtResource("2_hdqaw")
region = Rect2(76, 0, 12, 12)
filter_clip = true

[node name="LevelButton" type="TextureButton"]
offset_right = 64.0
offset_bottom = 38.0
theme = ExtResource("1_jegv2")
disabled = true
texture_normal = SubResource("AtlasTexture_okt7l")
texture_hover = SubResource("AtlasTexture_knew0")
texture_focused = SubResource("AtlasTexture_knew0")
script = ExtResource("3_qoq0a")

[node name="CompleteDecoration" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 63.0
offset_bottom = 37.0
texture = SubResource("AtlasTexture_1288j")

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 62.0
offset_bottom = 17.0
text = "NUM_LVL"
horizontal_alignment = 1

[node name="Star1Indicator" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -17.0
offset_right = 17.0
offset_bottom = -5.0
grow_vertical = 0
mouse_filter = 2
texture = SubResource("AtlasTexture_pl6wg")
script = ExtResource("3_nj5gh")
off = Vector2(64, 0)
on = Vector2(64, 12)

[node name="Star2Indicator" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = -17.0
offset_right = 30.0
offset_bottom = -5.0
grow_vertical = 0
mouse_filter = 2
texture = SubResource("AtlasTexture_eqi5q")
script = ExtResource("3_nj5gh")
off = Vector2(64, 0)
on = Vector2(64, 12)

[node name="Star3Indicator" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = -17.0
offset_right = 43.0
offset_bottom = -5.0
grow_vertical = 0
mouse_filter = 2
texture = SubResource("AtlasTexture_4l6w8")
script = ExtResource("3_nj5gh")
off = Vector2(64, 0)
on = Vector2(64, 12)

[node name="CoinIndicator" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -16.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
texture = SubResource("AtlasTexture_0tlq2")
script = ExtResource("3_nj5gh")
off = Vector2(76, 0)
on = Vector2(76, 12)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
